# typikon

./: .env.example  .gitignore  AGENTS.md  Jenkinsfile  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_users_table.py  003_russian_troparia.py  004_remove_csy.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  auth.py  calendar.py  deps.py  service.py
backend/app/api/admin/: __init__.py  blocks.py  calendar.py  dashboard.py  data_import.py  import.py  saints.py  templates.py
backend/app/engine/: __init__.py  assembler.py  calendar.py
backend/app/models/: __init__.py  base.py  calendar.py  enums.py  liturgical.py  saint.py  temple.py  user.py
backend/app/schemas/: calendar.py  common.py  liturgical.py  saint.py  user.py
backend/app/services/: auth.py  db.py  redis.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_calendar.py
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/fonts/: csy-fonts.css
frontend/src/app/: bookish.css  globals.css  layout.tsx
frontend/src/components/: AdminBlocks.tsx  AdminCalendar.tsx  AdminCheckbox.tsx  AdminDatePicker.tsx  AdminImport.tsx  AdminSaints.tsx  AdminSelect.tsx  AdminTemplates.tsx  AdminUsers.tsx  LoginForm.tsx
frontend/src/i18n/: config.ts
frontend/src/lib/: admin-tab.tsx  api.ts  auth.tsx  i18n.tsx  topbar.tsx
nginx/: nginx.conf
traefik/: typikon.yml
(+17 files in other folders)
